7.constructor function for character div

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <!--// house -->
 
-        <!-- 캐릭터 놓이는 곳 -->
+        <!-- 캐릭터 놓이는 곳 
         <div class = "character">
             <div class="character-face-con character-head">
                 <div class="character-face character-head-face face-front"></div>
@@ -76,12 +76,13 @@
                 <div class="character-face character-leg-face face-back"></div>
             </div>
         </div>
+        -->
     </div>
     <!--// stage -->
 </div>
 <!--// world -->
 
-
+<script src="js/character.js"></script>
 <script src="js/wall3d.js"></script>
 <script>
 (function () {
